@@ -1,6 +1,11 @@
 # ChangeLog file for java
 # This file is updated with Maddlog
 
+* Thu Sep  8 2016 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
+- Improved JdbcClient program by fixing some resource leaks.
+- Extended JdbcClient program by showing elapsed time information for each
+  query or command when started in interactive mode (no -f was used at startup).
+
 * Thu Sep  1 2016 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
 - Improved fetching and output speed of JdbcClient program for query results.
 
